fix warning bytebuddy